Всё сломалось:( 1. Пробовала добавить аутентификацию. 2. paging тоже неуспешно.